--- a/package.json
+++ b/package.json
@@ -14,22 +14,21 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^18.0.0",
+    "@types/node": "^18.11.11",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@prisma/client": "^4.7.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/mongoose": "^5.11.97",
-    "@types/mysql": "^2.15.21",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.2",
-    "mysql": "^2.18.1"
+    "prisma": "^4.7.1"
   }
 }
